ExampleParser.py
# Generated from Example.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ExampleParser ( Parser ):

    grammarFileName = "Example.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'let'", "'in'", "'begin'", 
                     "'end'", "'var'", "':'", "';'", "'function'", "'('", 
                     "')'", "'array'", "'['", "']'", "'of'", "'int'", "'float'", 
                     "','", "':='", "'if'", "'then'", "'endif'", "'else'", 
                     "'while'", "'do'", "'enddo'", "'for'", "'to'", "'break'", 
                     "'return'", "'+'", "'-'", "'*'", "'/'", "'='", "'<>'", 
                     "'<'", "'>'", "'<='", "'>='", "'&'", "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INTLIT", 
                      "FLOATLIT", "WS", "COMMENT" ]

    RULE_tiger_program = 0
    RULE_declaration_segment = 1
    RULE_var_declaration_list = 2
    RULE_var_declaration = 3
    RULE_funct_declaration_list = 4
    RULE_funct_declaration = 5
    RULE_type_ = 6
    RULE_type_id = 7
    RULE_id_list = 8
    RULE_optional_init = 9
    RULE_param_list = 10
    RULE_param_list_tail = 11
    RULE_ret_type = 12
    RULE_param = 13
    RULE_stat_seq = 14
    RULE_stat = 15
    RULE_opt_prefix = 16
    RULE_expr = 17
    RULE_const = 18
    RULE_binary_operator = 19
    RULE_expr_list = 20
    RULE_expr_list_tail = 21
    RULE_lvalue = 22
    RULE_lvalue_tail = 23

    ruleNames =  [ "tiger_program", "declaration_segment", "var_declaration_list", 
                   "var_declaration", "funct_declaration_list", "funct_declaration", 
                   "type_", "type_id", "id_list", "optional_init", "param_list", 
                   "param_list_tail", "ret_type", "param", "stat_seq", "stat", 
                   "opt_prefix", "expr", "const", "binary_operator", "expr_list", 
                   "expr_list_tail", "lvalue", "lvalue_tail" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    ID=43
    INTLIT=44
    FLOATLIT=45
    WS=46
    COMMENT=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Tiger_programContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_segment(self):
            return self.getTypedRuleContext(ExampleParser.Declaration_segmentContext,0)


        def stat_seq(self):
            return self.getTypedRuleContext(ExampleParser.Stat_seqContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_tiger_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTiger_program" ):
                listener.enterTiger_program(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTiger_program" ):
                listener.exitTiger_program(self)




    def tiger_program(self):

        localctx = ExampleParser.Tiger_programContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tiger_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(ExampleParser.T__0)
            self.state = 49
            self.match(ExampleParser.T__1)
            self.state = 50
            self.declaration_segment()
            self.state = 51
            self.match(ExampleParser.T__2)
            self.state = 52
            self.match(ExampleParser.T__3)
            self.state = 53
            self.stat_seq()
            self.state = 54
            self.match(ExampleParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_segmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration_list(self):
            return self.getTypedRuleContext(ExampleParser.Var_declaration_listContext,0)


        def funct_declaration_list(self):
            return self.getTypedRuleContext(ExampleParser.Funct_declaration_listContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_declaration_segment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration_segment" ):
                listener.enterDeclaration_segment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration_segment" ):
                listener.exitDeclaration_segment(self)




    def declaration_segment(self):

        localctx = ExampleParser.Declaration_segmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration_segment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.var_declaration_list()
            self.state = 57
            self.funct_declaration_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declaration_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self):
            return self.getTypedRuleContext(ExampleParser.Var_declarationContext,0)


        def var_declaration_list(self):
            return self.getTypedRuleContext(ExampleParser.Var_declaration_listContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_var_declaration_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaration_list" ):
                listener.enterVar_declaration_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaration_list" ):
                listener.exitVar_declaration_list(self)




    def var_declaration_list(self):

        localctx = ExampleParser.Var_declaration_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declaration_list)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExampleParser.T__2, ExampleParser.T__8]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [ExampleParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.var_declaration()
                self.state = 61
                self.var_declaration_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(ExampleParser.Id_listContext,0)


        def type_(self):
            return self.getTypedRuleContext(ExampleParser.Type_Context,0)


        def optional_init(self):
            return self.getTypedRuleContext(ExampleParser.Optional_initContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_var_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaration" ):
                listener.enterVar_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaration" ):
                listener.exitVar_declaration(self)




    def var_declaration(self):

        localctx = ExampleParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(ExampleParser.T__5)
            self.state = 66
            self.id_list()
            self.state = 67
            self.match(ExampleParser.T__6)
            self.state = 68
            self.type_()
            self.state = 69
            self.optional_init()
            self.state = 70
            self.match(ExampleParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funct_declaration_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funct_declaration(self):
            return self.getTypedRuleContext(ExampleParser.Funct_declarationContext,0)


        def funct_declaration_list(self):
            return self.getTypedRuleContext(ExampleParser.Funct_declaration_listContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_funct_declaration_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunct_declaration_list" ):
                listener.enterFunct_declaration_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunct_declaration_list" ):
                listener.exitFunct_declaration_list(self)




    def funct_declaration_list(self):

        localctx = ExampleParser.Funct_declaration_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funct_declaration_list)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExampleParser.T__2]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [ExampleParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.funct_declaration()
                self.state = 74
                self.funct_declaration_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funct_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExampleParser.ID, 0)

        def param_list(self):
            return self.getTypedRuleContext(ExampleParser.Param_listContext,0)


        def ret_type(self):
            return self.getTypedRuleContext(ExampleParser.Ret_typeContext,0)


        def stat_seq(self):
            return self.getTypedRuleContext(ExampleParser.Stat_seqContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_funct_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunct_declaration" ):
                listener.enterFunct_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunct_declaration" ):
                listener.exitFunct_declaration(self)




    def funct_declaration(self):

        localctx = ExampleParser.Funct_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funct_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ExampleParser.T__8)
            self.state = 79
            self.match(ExampleParser.ID)
            self.state = 80
            self.match(ExampleParser.T__9)
            self.state = 81
            self.param_list()
            self.state = 82
            self.match(ExampleParser.T__10)
            self.state = 83
            self.ret_type()
            self.state = 84
            self.match(ExampleParser.T__3)
            self.state = 85
            self.stat_seq()
            self.state = 86
            self.match(ExampleParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_id(self):
            return self.getTypedRuleContext(ExampleParser.Type_idContext,0)


        def INTLIT(self):
            return self.getToken(ExampleParser.INTLIT, 0)

        def getRuleIndex(self):
            return ExampleParser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)




    def type_(self):

        localctx = ExampleParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type_)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExampleParser.T__15, ExampleParser.T__16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.type_id()
                pass
            elif token in [ExampleParser.T__11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(ExampleParser.T__11)
                self.state = 90
                self.match(ExampleParser.T__12)
                self.state = 91
                self.match(ExampleParser.INTLIT)
                self.state = 92
                self.match(ExampleParser.T__13)
                self.state = 93
                self.match(ExampleParser.T__14)
                self.state = 94
                self.type_id()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExampleParser.RULE_type_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_id" ):
                listener.enterType_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_id" ):
                listener.exitType_id(self)




    def type_id(self):

        localctx = ExampleParser.Type_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not(_la==ExampleParser.T__15 or _la==ExampleParser.T__16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExampleParser.ID, 0)

        def id_list(self):
            return self.getTypedRuleContext(ExampleParser.Id_listContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)




    def id_list(self):

        localctx = ExampleParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_list)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(ExampleParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(ExampleParser.ID)
                self.state = 101
                self.match(ExampleParser.T__17)
                self.state = 102
                self.id_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Optional_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const(self):
            return self.getTypedRuleContext(ExampleParser.ConstContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_optional_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptional_init" ):
                listener.enterOptional_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptional_init" ):
                listener.exitOptional_init(self)




    def optional_init(self):

        localctx = ExampleParser.Optional_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_optional_init)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExampleParser.T__7]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [ExampleParser.T__18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(ExampleParser.T__18)
                self.state = 107
                self.const()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(ExampleParser.ParamContext,0)


        def param_list_tail(self):
            return self.getTypedRuleContext(ExampleParser.Param_list_tailContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = ExampleParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_list)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExampleParser.T__10]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [ExampleParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.param()
                self.state = 112
                self.param_list_tail()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(ExampleParser.ParamContext,0)


        def param_list_tail(self):
            return self.getTypedRuleContext(ExampleParser.Param_list_tailContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_param_list_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list_tail" ):
                listener.enterParam_list_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list_tail" ):
                listener.exitParam_list_tail(self)




    def param_list_tail(self):

        localctx = ExampleParser.Param_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_list_tail)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExampleParser.T__10]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [ExampleParser.T__17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(ExampleParser.T__17)
                self.state = 118
                self.param()
                self.state = 119
                self.param_list_tail()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ret_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ExampleParser.Type_Context,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_ret_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet_type" ):
                listener.enterRet_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet_type" ):
                listener.exitRet_type(self)




    def ret_type(self):

        localctx = ExampleParser.Ret_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ret_type)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExampleParser.T__3]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [ExampleParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(ExampleParser.T__6)
                self.state = 125
                self.type_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExampleParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(ExampleParser.Type_Context,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = ExampleParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(ExampleParser.ID)
            self.state = 129
            self.match(ExampleParser.T__6)
            self.state = 130
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stat_seqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(ExampleParser.StatContext,0)


        def stat_seq(self):
            return self.getTypedRuleContext(ExampleParser.Stat_seqContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_stat_seq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_seq" ):
                listener.enterStat_seq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_seq" ):
                listener.exitStat_seq(self)




    def stat_seq(self):

        localctx = ExampleParser.Stat_seqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_stat_seq)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.stat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.stat()
                self.state = 134
                self.stat_seq()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(ExampleParser.LvalueContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExampleParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExampleParser.ExprContext,i)


        def stat_seq(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExampleParser.Stat_seqContext)
            else:
                return self.getTypedRuleContext(ExampleParser.Stat_seqContext,i)


        def ID(self):
            return self.getToken(ExampleParser.ID, 0)

        def opt_prefix(self):
            return self.getTypedRuleContext(ExampleParser.Opt_prefixContext,0)


        def expr_list(self):
            return self.getTypedRuleContext(ExampleParser.Expr_listContext,0)


        def declaration_segment(self):
            return self.getTypedRuleContext(ExampleParser.Declaration_segmentContext,0)


        def getRuleIndex(self):
            return ExampleParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = ExampleParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_stat)
        try:
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.lvalue()
                self.state = 139
                self.match(ExampleParser.T__18)
                self.state = 140
                self.expr(0)
                self.state = 141
                self.match(ExampleParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(ExampleParser.T__19)
                self.state = 144
                self.expr(0)
                self.state = 145
                self.match(ExampleParser.T__20)
                self.state = 146
                self.stat_seq()
                self.state = 147
                self.match(ExampleParser.T__21)
                self.state = 148
                self.match(ExampleParser.T__7)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.match(ExampleParser.T__19)
                self.state = 151
                self.expr(0)
                self.state = 152
                self.match(ExampleParser.T__20)
                self.state = 153
                self.stat_seq()
                self.state = 154
                self.match(ExampleParser.T__22)
                self.state = 155
                self.stat_seq()
                self.state = 156
                self.match(ExampleParser.T__21)
                self.state = 157
                self.match(ExampleParser.T__7)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 159
                self.match(ExampleParser.T__23)
                self.state = 160
                self.expr(0)
                self.state = 161
                self.match(ExampleParser.T__24)
                self.state = 162
                self.stat_seq()
                self.state = 163
                self.match(ExampleParser.T__25)
                self.state = 164
                self.match(ExampleParser.T__7)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 166
                self.match(ExampleParser.T__26)
                self.state = 167
                self.match(ExampleParser.ID)
                self.state = 168
                self.match(ExampleParser.T__18)
                self.state = 169
                self.expr(0)
                self.state = 170
                self.match(ExampleParser.T__27)
                self.state = 171
                self.expr(0)
                self.state = 172
                self.match(ExampleParser.T__24)
                self.state = 173
                self.stat_seq()
                self.state = 174
                self.match(ExampleParser.T__25)
                self.state = 175
                self.match(ExampleParser.T__7)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 177
                self.opt_prefix()
                self.state = 178
                self.match(ExampleParser.ID)
                self.state = 179
                self.match(ExampleParser.T__9)
                self.state = 180
                self.expr_list()
                self.state = 181
                self.match(ExampleParser.T__10)
                self.state = 182
                self.match(ExampleParser.T__7)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 184
                self.match(ExampleParser.T__28)
                self.state = 185
                self.match(ExampleParser.T__7)
                pass
